--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,5 @@ REACT_APP_AWS_USER_POOL_ID=
 REACT_APP_AWS_USER_POOL_WEBCLIENT_ID=
 REACT_APP_AWS_IDENTITY_POOL_ID=
 REACT_APP_AWS_S3_BUCKET=
+REACT_APP_AWS_VIDEO_S3_BUCKET=
+REACT_APP_AWS_API_GATEWAY=
